SAK-23907 delete assembly, remove redundant <repository>
git-svn-id: https://source.sakaiproject.org/svn/portal/trunk@129552 66ffb92e-73f9-0310-93c1-f5514f145a0a